// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`biomeGenerator strict output matches snapshot 1`] = `
"// ai-guardrails:sha256=8535b5a6aa8e4be8de148a1e715d2b8aaaa03bbbb12eda9858043a0d2c3796fb
{
  "linter": {
    "enabled": true,
    "rules": {
      "recommended": true,
      "correctness": {
        "noUnusedVariables": "error",
        "noUnusedImports": "error"
      },
      "style": {
        "useConst": "error",
        "useTemplate": "error"
      },
      "suspicious": {
        "noExplicitAny": "error",
        "noConsole": "warn",
        "useBiomeIgnoreFolder": "off"
      }
    }
  },
  "formatter": {
    "enabled": true,
    "indentStyle": "space",
    "indentWidth": 2,
    "lineWidth": 88
  },
  "javascript": {
    "formatter": {
      "quoteStyle": "double",
      "trailingCommas": "es5"
    }
  }
}"
`;

exports[`biomeGenerator standard output matches snapshot 1`] = `
"// ai-guardrails:sha256=216874db2bcff6252fc304cb4ecc3adf046a00c3e8a446854e091ee355827793
{
  "linter": {
    "enabled": true,
    "rules": {
      "recommended": true
    }
  },
  "formatter": {
    "enabled": true,
    "indentStyle": "space",
    "indentWidth": 2,
    "lineWidth": 88
  },
  "javascript": {
    "formatter": {
      "quoteStyle": "double",
      "trailingCommas": "es5"
    }
  }
}"
`;

exports[`biomeGenerator minimal output matches snapshot 1`] = `
"// ai-guardrails:sha256=8285ff76f22073876a9b85b87733e4aa7064cee255b96231d0487a6fd425a973
{
  "linter": {
    "enabled": true,
    "rules": {
      "recommended": false,
      "correctness": {
        "noUnusedVariables": "error",
        "noUnusedImports": "error"
      },
      "suspicious": {
        "noExplicitAny": "error"
      }
    }
  },
  "formatter": {
    "enabled": true,
    "indentStyle": "space",
    "indentWidth": 2,
    "lineWidth": 88
  },
  "javascript": {
    "formatter": {
      "quoteStyle": "double",
      "trailingCommas": "es5"
    }
  }
}"
`;
